Fix food image scaling - make smaller without cropping on all mobile devices

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -3763,7 +3763,45 @@ html, body {
   }
 }
 
-/* iPhone 12 and similar devices (390px width) */
+/* Comprehensive mobile phone fixes - prevent slideshow text overlapping food */
+@media screen and (max-width: 767px) {
+  .slider-paragraph-name-container {
+    top: 10px !important;
+    left: 10px !important;
+    z-index: 20 !important;
+  }
+  
+  .slider-image-container {
+    margin-top: 180px !important;
+    z-index: 1 !important;
+    height: 60% !important;
+  }
+  
+  .slider-image-container img {
+    transform: scale(0.7) !important;
+  }
+}
+
+/* iPhone 12 Pro Max, iPhone 13/14/15 series (428px width) */
+@media screen and (max-width: 428px) {
+  .slider-paragraph-name-container {
+    top: 5px !important;
+    left: 5px !important;
+    width: 300px;
+    margin-right: 50px;
+  }
+  
+  .slider-image-container {
+    margin-top: 200px !important;
+    height: 55% !important;
+  }
+  
+  .slider-image-container img {
+    transform: scale(0.65) !important;
+  }
+}
+
+/* iPhone 12/13/14/15 Pro (390px width) */
 @media screen and (max-width: 390px) {
   .restaurant-herocontainer {
     gap: 80px !important;
@@ -3783,7 +3821,11 @@ html, body {
   
   .slider-image-container {
     margin-top: 200px !important;
-    height: 40% !important;
+    height: 50% !important;
+  }
+  
+  .slider-image-container img {
+    transform: scale(0.6) !important;
   }
   
   /* Make hero text break naturally at word boundaries */
@@ -3794,5 +3836,43 @@ html, body {
     word-break: normal;
     hyphens: auto;
     max-width: 100%;
+  }
+}
+
+/* iPhone SE, smaller phones (375px width) */
+@media screen and (max-width: 375px) {
+  .slider-paragraph-name-container {
+    top: 5px !important;
+    left: 5px !important;
+    width: 260px;
+    margin-right: 40px;
+  }
+  
+  .slider-image-container {
+    margin-top: 220px !important;
+    height: 45% !important;
+  }
+  
+  .slider-image-container img {
+    transform: scale(0.55) !important;
+  }
+}
+
+/* Samsung Galaxy S series, Pixel phones (360px width) */
+@media screen and (max-width: 360px) {
+  .slider-paragraph-name-container {
+    top: 5px !important;
+    left: 5px !important;
+    width: 250px;
+    margin-right: 30px;
+  }
+  
+  .slider-image-container {
+    margin-top: 240px !important;
+    height: 40% !important;
+  }
+  
+  .slider-image-container img {
+    transform: scale(0.5) !important;
   }
 }
